--- a/posts/package.json
+++ b/posts/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "restaurants",
+  "name": "posts",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon inde.js"
+    "start": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
@@ -12,6 +12,7 @@
     "axios": "^0.21.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.9",
+    "uuid": "^8.3.2"
   }
 }
